refactor: move PB updates to the  top

--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -18,22 +18,15 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.6.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.5.0-to-5.6.0) for the upgrade steps.
 :::
 
-<!-- TODO: feel free to push this item to the bottom of the list -->
-## File Manager
-
-### Fixed Uploading Files With Less Standard Extensions([#1577](https://github.com/webiny/webiny-js/pull/1577))
-
-When in File Manager, uploading files with a less standard file extension would fail. This is no longer the case.
-
 ## Page Builder
 
-### Add Visibility Element Setting in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
+### Added Visibility Element Setting in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
 
 Now, you can set the visibility of an element using the _Visibility setting_ in the page editor sidebar.
 
 <CenteredImage alt="Webiny Page Builder visibility element setting" src={pbElementVisibilitySettingDemo} />
 
-### Add Navigator in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
+### Added Navigator in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
 
 Quickly see the hierarchy structure of the page in a tree view.
 You can also:
@@ -42,3 +35,9 @@ You can also:
 - quickly jump between elements
 
 <CenteredImage alt="Webiny Page Builder navigator demo" src={pbNavigatorDemo} />
+
+## File Manager
+
+### Fixed Uploading Files With Less Standard Extensions([#1577](https://github.com/webiny/webiny-js/pull/1577))
+
+When in File Manager, uploading files with a less standard file extension would fail. This is no longer the case.
