add link to  tailwind config file

--- a/docs/how-to-guides/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrate-tailwindcss.mdx
@@ -162,11 +162,11 @@ tailwindcss init
 ```
 
 :::note
-We have created the `tailwind.config.js` file in the root of Webiny project so that we can share it across all Webiny applications,
+We have created the [`tailwind.config.js`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/tailwind.config.js) file in the root of Webiny project so that we can share it across all Webiny applications,
 for example, `apps/admin` and `apps/website`.
 :::
 
-This creates a minimal `tailwind.config.js` file at the root of your project:
+This creates a minimal [`tailwind.config.js`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/tailwind.config.js) file at the root of your project:
 
 ```js title="tailwind.config.js"
 module.exports = {
