--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -9,6 +9,7 @@ description: See what's new in Webiny version 5.6.0.
 import CenteredImage from "../mdxComponents/centeredImage";
 import pbNavigatorDemo from "./5.6.0/pb-navigator-block-reorder.gif";
 import pbElementVisibilitySettingDemo from "./5.6.0/pb-navigator-visibility.gif";
+import cmsContentModelGroupsChanging from "./5.6.0/cms-content-model-groups-changing.gif";
 
 # Changes
 
@@ -18,6 +19,16 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.6.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.5.0-to-5.6.0) for the upgrade steps.
 :::
 
+## Headless CMS
+
+### Added Ability To Change Content Model Group ([#1591](https://github.com/webiny/webiny-js/pull/1591))
+
+Upon creating a content model, users are required to select a content model group, into which their new content model will be put. But, if later down the road, users decided to change the group, they wouldn't be able to do it via user interface.
+
+To address this issue, in the Headless CMS content model editor, a new form input was added to the settings section, allowing us to change the group if needed.
+
+<CenteredImage alt="Changing Content Model Groups" src={cmsContentModelGroupsChanging} />
+
 ## Page Builder
 
 ### Added Visibility Element Setting in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
@@ -25,6 +36,7 @@ Please check the [Webiny 5.6.0 migration guide](/docs/how-to-guides/upgrade-webi
 Now, you can set the visibility of an element using the _Visibility setting_ in the page editor sidebar.
 
 <CenteredImage alt="Webiny Page Builder visibility element setting" src={pbElementVisibilitySettingDemo} />
+
 
 ### Added Navigator in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
 
