fix(changelog): add referencing multiple content models with ref field

--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -10,6 +10,7 @@ import CenteredImage from "../mdxComponents/centeredImage";
 import pbNavigatorDemo from "./5.6.0/pb-navigator-block-reorder.gif";
 import pbElementVisibilitySettingDemo from "./5.6.0/pb-navigator-visibility.gif";
 import cmsContentModelGroupsChanging from "./5.6.0/cms-content-model-groups-changing.gif";
+import cmsRefMultipleModels from "./5.6.0/cms-ref-multiple-models.png";
 
 # Changes
 
@@ -21,11 +22,23 @@ Please check the [Webiny 5.6.0 migration guide](/docs/how-to-guides/upgrade-webi
 
 ## Headless CMS
 
+### The Reference Field Can Now Reference Different Content Models ([#1572](https://github.com/webiny/webiny-js/pull/1572))
+
+A feature that has been frequently requested is finally here!
+
+Within a single reference field, you can now reference content entries that are created of multiple different content models.
+
+For example, here we are adding the **Published Work** reference field to the existing **Author** content model. Notice how we've picked not one, but three different content models in the **Content Models** field: **Book**, **Video**, and **Music**.
+
+<CenteredImage alt="Reference Field - Adding Multiple Different Content Models" src={cmsRefMultipleModels} />
+
+This means that, while managing authors, users will be able to select multiple book, video, and music entries, all referenced via the single **Published Work** reference field.
+
 ### Added Ability To Change Content Model Group ([#1591](https://github.com/webiny/webiny-js/pull/1591))
 
 Upon creating a content model, users are required to select a content model group, into which their new content model will be put. But, if later down the road, users decided to change the group, they wouldn't be able to do it via user interface.
 
-To address this issue, in the Headless CMS content model editor, a new form input was added to the settings section, allowing us to change the group if needed.
+To address this issue, in the Headless CMS content model editor, a new form field was added to the settings section, allowing us to change the group if needed.
 
 <CenteredImage alt="Changing Content Model Groups" src={cmsContentModelGroupsChanging} />
 
