fix(changelog): add TypeScript configs change

--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -61,8 +61,27 @@ You can also:
 
 <CenteredImage alt="Webiny Page Builder navigator demo" src={pbNavigatorDemo} />
 
+## Webiny CLI
+
+### Improved Watch Command With Brand New `browser` Output
+
+
 ## File Manager
 
 ### Fixed Uploading Files With Less Standard Extensions([#1577](https://github.com/webiny/webiny-js/pull/1577))
 
 When in File Manager, uploading files with a less standard file extension would fail. This is no longer the case.
+
+## Other
+
+### Migrating Config Files to TypeScript
+
+For a very long time, our wish was to have Webiny projects be 100% TypeScript. And while that was to a large degree true, there were still a couple of pieces missing.
+
+So, with this release, we migrated all of the different JavaScript configuration files to TypeScript. These include:
+
+- `webiny.project.ts` - located in your project root
+- `webiny.application.ts` - located within project application folders (e.g. [`api/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/webiny.application.ts))
+- `webiny.config.ts` - located within all packages in your Webiny project
+
+Note that the existing JavaScript configuration files will still work. You're not forced to migrate if you don't want to or it's not that important.
