add FAQ section

--- a/docs/how-to-guides/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrate-tailwindcss.mdx
@@ -14,8 +14,9 @@ description: Learn how to integrate tailwindcss in your Webiny project.
 ## Overview
 
 [Tailwind CSS](https://tailwindcss.com/) is a popular utility-first CSS framework.
-So, naturally, one of the most frequently asked questions by the community is **how to add tailwindcss in Webiny project?**
-And, in this guide, we'll answer exactly that. So without further ado let's start.
+It allows us to quickly build user interfaces with the help of a plethora of built-in CSS classes, without ever leaving our HTML.
+
+In this guide, we show how you can integrate Tailwind CSS into your Webiny project.
 
 :::info
 The code that we will cover in this guide can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/integrate-tailwind-css).
@@ -23,8 +24,8 @@ The code that we will cover in this guide can also be found in our GitHub [examp
 
 ## Setting Up Tailwind CSS
 
-### Install Tailwind via Yarn
-Install Tailwind and its peer-dependencies using yarn by running the following command from root of your project:
+### Install Tailwind CSS via Yarn
+Install `tailwindcss` and its peer-dependencies using yarn by running the following command from root of your project:
 
 ```
 yarn add -D tailwindcss@npm:@tailwindcss/postcss7-compat^2.1.2 postcss@^7 autoprefixer@^9
@@ -33,7 +34,7 @@ yarn add -D tailwindcss@npm:@tailwindcss/postcss7-compat^2.1.2 postcss@^7 autopr
 Webiny currently uses [Webpack 4](https://v4.webpack.js.org/) which doesn't support PostCSS 8 yet so you need to install the [Tailwind CSS v2.0 PostCSS 7 compatibility](https://tailwindcss.com/docs/installation#post-css-7-compatibility-build) build for now as shown above.
 :::
 
-### Add Tailwindcss to Webpack Configuration
+### Add Tailwind CSS to Webpack Configuration
 
 In this guide, we integrate Tailwindcss in the **Website** project application's React application `(apps/website)`.
 But, you can use the same approach for other Webiny applications or a custom application for that matter.
@@ -193,8 +194,8 @@ Now that we have this global configuration, let's use it in the **Website** `(ap
 module.exports = require("../../../tailwind.config");
 ```
 
-### Include Tailwind in Your SCSS
-Now it's time to include the tailwind directives in your styles.
+### Include Tailwind CSS in Your SCSS
+Now it's time to include the Tailwindcss directives in your styles.
 As most of the styles for Webiny applications are present in `apps/theme` package, we also include tailwind styles there.
 
 Open the `apps/theme/styles.scss` file that exports all theme styles and use the `@tailwind` directive to include Tailwind's `base`, `components`, and `utilities` styles as shown below:
@@ -206,8 +207,7 @@ Open the `apps/theme/styles.scss` file that exports all theme styles and use the
 (...)
 ```
 
-Tailwind will swap these directives out at build-time with all of the styles it generates based on your configured design system.
-
+Tailwindcss swaps these directives out at build-time with all of the styles it generates based on your configured design system.
 
 That's all! Now, when you start your **Website** `(apps/website)` React application locally, by running:
 
@@ -220,12 +220,12 @@ or build it (which happens automatically for you when you deploy your applicatio
 ```
 yarn build --env=<YOUR_ENV>
 ```
-Tailwind CSS is ready to use in your Webiny project.
+Tailwindcss is ready to use in your Webiny project.
 
-### Use Tailwind in Website
+### Use Tailwind CSS in Website
 
 Now, you're all set to use the Tailwind CSS in your **Website** `(apps/website)` React application,
-let's try adding an example section made with tailwindcss as shown below:
+let's try adding an example section made with Tailwindcss as shown below:
 
 ```tsx title="apps/website/code/src/ExampleMadeWithTailwindCSS.tsx"
 import React from "react";
@@ -298,3 +298,13 @@ And, this is how it looks in the browser:
 <!-- vale on -->
 
 
+## FAQ
+
+#### Can I include the Tailwindcss directives in Website `(app/website)` React application directly?
+
+Yes, you can include the directives directly in the style file of in React application.
+We choose the `apps/theme` package in the guide because it's being used in all React applications of a Webiny project, as a result, we don't have to include these directives in every React application.
+
+#### Why are we not using Webpack v5 in a Webiny project?
+
+We are working on the [Webpack upgrade](https://github.com/webiny/webiny-js/pull/1590).
