--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -26,6 +26,10 @@ Please check the [Webiny 5.5.0 migration guide](/docs/how-to-guides/upgrade-webi
 
 ### Brand New `webiny watch` Command ([#1540](https://github.com/webiny/webiny-js/pull/1540))
 
+:::tip
+We also wrote about the new `webiny watch` command on our [blog](https://www.webiny.com/blog/webiny-v5.5.0-watch)! It also contains a live demo, so we encourage you to check it out.
+:::
+
 The brand new `webiny watch` command brings local development experience to a whole new level!
 
 #### How We Currently Do It
