--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -11,6 +11,7 @@ import pbNavigatorDemo from "./5.6.0/pb-navigator-block-reorder.gif";
 import pbElementVisibilitySettingDemo from "./5.6.0/pb-navigator-visibility.gif";
 import cmsContentModelGroupsChanging from "./5.6.0/cms-content-model-groups-changing.gif";
 import cmsRefMultipleModels from "./5.6.0/cms-ref-multiple-models.png";
+import cliWatchBrowserDemo from "./5.6.0/cli-watch-browser-demo.gif";
 
 # Changes
 
@@ -50,7 +51,6 @@ Now, you can set the visibility of an element using the _Visibility setting_ in 
 
 <CenteredImage alt="Webiny Page Builder visibility element setting" src={pbElementVisibilitySettingDemo} />
 
-
 ### Added Navigator in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
 
 Quickly see the hierarchy structure of the page in a tree view.
@@ -63,8 +63,27 @@ You can also:
 
 ## Webiny CLI
 
-### Improved Watch Command With Brand New `browser` Output
+### Improved Watch Command With Brand New `browser` Output ([#1573](https://github.com/webiny/webiny-js/pull/1573))
 
+In our [previous release](/docs/changelog/5.5.0), we released the brand new [`webiny watch`](http://localhost:3000/docs/changelog/5.5.0#brand-new-webiny-watch-command-1540) command. But, we didn't stop there, so today, we're happy to introduce its first improvement.
+
+Upon running the `webiny watch` command, by simply appending the `--browser output` argument, you can now have all of the build, deploy, and logs output displayed in your browser.
+
+The following video shows the new improvement in action:
+
+<CenteredImage alt="Webiny Watch Command - Browser Output" src={cliWatchBrowserDemo} />
+
+:::info
+The full command we run here is `yarn webiny watch api/code/graphql --env dev --logs --output browser`.
+:::
+
+Comparing this to the original terminal output, we can immediately see that here we have a lot more options when it comes to building the actual user interface. Features like scrolling, resizing of panes, and others, are simply not possible to implement in your regular terminal.
+
+This also gives us ability to maybe add more features in the future, if our community will show interest.
+
+:::tip
+Have an awesome idea? [Let us know](https://www.webiny.com/slack), we'd be glad to hear about it!
+:::
 
 ## File Manager
 
@@ -74,7 +93,21 @@ When in File Manager, uploading files with a less standard file extension would 
 
 ## Other
 
-### Migrating Config Files to TypeScript
+### Added Tags For Remaining Cloud Infrastructure Resources ([#1585](https://github.com/webiny/webiny-js/pull/1585))
+
+In one of our previous releases, we added tagging of cloud infrastructure resources. In other words, all resources that are deployed to your AWS account are tagged with `WbyProjectName` and `WbyEnvironment` tags, which makes it easier to later find everything that's deployed by Webiny, in your [AWS Management Console](https://aws.amazon.com/console/).
+
+But, this was done for the **API** project application's cloud infrastructure resources only. The remaining **Admin Area** and **Website** applications were still deploying resources without tagging anything.
+
+So, from now on, you can expect all of the project applications (meaning all cloud infrastructure resources) to apply tags, so you get a complete picture.
+
+:::tip
+As you may have already known, every Webiny project, by default, comes with three project application: **API** (`api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`). These consist of application code, and, more importantly, of necessary cloud infrastructure that needs to be deployed in order for them to work as intended.
+
+Read more about project organization in the [Project Organization](/docs/key-topics/project-organization/project-applications-and-packages) key topics section.
+:::
+
+### Migrating Config Files to TypeScript ([#1584](https://github.com/webiny/webiny-js/pull/1584))
 
 For a very long time, our wish was to have Webiny projects be 100% TypeScript. And while that was to a large degree true, there were still a couple of pieces missing.
 
