refactor: rename Tailwindcss to Tailwind CSS

--- a/docs/how-to-guides/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrate-tailwindcss.mdx
@@ -2,7 +2,7 @@
 id: integrate-tailwindcss
 title: Integrate Tailwind CSS
 sidebar_label: Integrate Tailwind CSS
-keywords: ["webiny", "tailwindcss"]
+keywords: ["webiny", "tailwind css"]
 description: Learn how to integrate tailwindcss in your Webiny project.
 ---
 
@@ -36,14 +36,14 @@ Webiny currently uses [Webpack 4](https://v4.webpack.js.org/) which doesn't supp
 
 ### Add Tailwind CSS to Webpack Configuration
 
-In this guide, we integrate Tailwindcss in the **Website** project application's React application `(apps/website)`.
+In this guide, we integrate Tailwind CSS in the **Website** project application's React application `(apps/website)`.
 But, you can use the same approach for other Webiny applications or a custom application for that matter.
 
 :::info
 Learn more about project applications and packages in the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) key topic.
 :::
 
-We need to add the Tailwindcss to the `postcss` plugins inside the Webpack configuration of the application.
+We need to add the Tailwind CSS to the `postcss` plugins inside the Webpack configuration of the application.
 
 Every Webiny application has a `webiny.config.ts` file that exports the often used development-related commands.
 In the case of **Website**`(apps/website)` it contains the following commands:
@@ -78,7 +78,7 @@ We use `startApp` and `buildApp` helper functions that we imported from `"@webin
 Both, `startApp` and `buildApp` function, takes two arguments: `options` and `context`.
 
 You can pass a function named `webpack` to this `options` object. It receives `config` as the single argument and should return the new config for Webpack.
-We will make use of this function to add Tailwindcss support in our Webpack configuration:
+We will make use of this function to add Tailwind CSS support in our Webpack configuration:
 
 ```js title="apps/website/code/webiny.config.ts {10-15,23-28}"
 const { startApp, buildApp } = require("@webiny/project-utils");
@@ -116,10 +116,10 @@ module.exports = {
 };
 ```
 
-We use `options.webpack` to add Tailwindcss in the Webpack configuration in both `startApp` and `buildApp` commands.
+We use `options.webpack` to add Tailwind CSS in the Webpack configuration in both `startApp` and `buildApp` commands.
 
 :::info
-We made this change in both `startApp` and `buildApp` commands so that we can use Tailwindcss in both local development and deployed application.
+We made this change in both `startApp` and `buildApp` commands so that we can use Tailwind CSS in both local development and deployed application.
 :::
 
 The actual code responsible for making the required modifications to the Webpack configuration is inside the [`applyTailwindToWebpack`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/code/applyTailwindToWebpack.js) file:
@@ -151,9 +151,9 @@ It takes `config` as the single argument and returns the new configuration after
 
 Inside that function, we use [`traverseLoaders`](https://github.com/webiny/webiny-js/blob/next/packages/project-utils/traverseLoaders.js) helper function that we require from `@webiny/project-utils` package.
 It traverses all the loaders defined in `modules.rules` property of the Webpack configuration and passes each one of them to your callback.
-You can then apply your modifications. In our case, we add Tailwindcss plugins to the [`postcss-loader`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/code/applyTailwindToWebpack.js#L13).
+You can then apply your modifications. In our case, we add Tailwind CSS plugins to the [`postcss-loader`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/code/applyTailwindToWebpack.js#L13).
 
-Now that we have added Tailwindcss to Webpack configuration, let's move on to the next step.
+Now that we have added Tailwind CSS to Webpack configuration, let's move on to the next step.
 
 ### Create Your Tailwind CSS Configuration File
 Next, generate your `tailwind.config.js` file. From the root of your project run the following command:
@@ -195,10 +195,10 @@ module.exports = require("../../../tailwind.config");
 ```
 
 ### Include Tailwind CSS in Your SCSS
-Now it's time to include the Tailwindcss directives in your styles.
+Now it's time to include the Tailwind CSS directives in your styles.
 As most of the styles for Webiny applications are present in `apps/theme` package, we also include tailwind styles there.
 
-Open the `apps/theme/styles.scss` file that exports all theme styles and use the `@tailwind` directive to include Tailwind's `base`, `components`, and `utilities` styles as shown below:
+Open the `apps/theme/styles.scss` file that exports all theme styles and use the `@tailwind` directive to include Tailwind CSS `base`, `components`, and `utilities` styles as shown below:
 
 ```scss title="apps/theme/styles.scss"
 @tailwind base;
@@ -207,7 +207,7 @@ Open the `apps/theme/styles.scss` file that exports all theme styles and use the
 (...)
 ```
 
-Tailwindcss swaps these directives out at build-time with all of the styles it generates based on your configured design system.
+Tailwind CSS swaps these directives out at build-time with all of the styles it generates based on your configured design system.
 
 That's all! Now, when you start your **Website** `(apps/website)` React application locally, by running:
 
@@ -220,12 +220,12 @@ or build it (which happens automatically for you when you deploy your applicatio
 ```
 yarn build --env=<YOUR_ENV>
 ```
-Tailwindcss is ready to use in your Webiny project.
+Tailwind CSS is ready to use in your Webiny project.
 
 ### Use Tailwind CSS in Website
 
 Now, you're all set to use the Tailwind CSS in your **Website** `(apps/website)` React application,
-let's try adding an example section made with Tailwindcss as shown below:
+let's try adding an example section made with Tailwind CSS as shown below:
 
 ```tsx title="apps/website/code/src/ExampleMadeWithTailwindCSS.tsx"
 import React from "react";
@@ -300,7 +300,7 @@ And, this is how it looks in the browser:
 
 ## FAQ
 
-#### Can I include the Tailwindcss directives in Website `(app/website)` React application directly?
+#### Can I include the Tailwind CSS directives in Website `(app/website)` React application directly?
 
 Yes, you can include the directives directly in the style file of in React application.
 We choose the `apps/theme` package in the guide because it's being used in all React applications of a Webiny project, as a result, we don't have to include these directives in every React application.
