refactor: remove integrate from sidebar and title

--- a/docs/how-to-guides/development/integrations/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/development/integrations/integrate-tailwindcss.mdx
@@ -1,7 +1,7 @@
 ---
 id: integrate-tailwindcss
-title: Integrate Tailwind CSS
-sidebar_label: Integrate Tailwind CSS
+title: Tailwind CSS
+sidebar_label: Tailwind CSS
 keywords: ["webiny", "tailwind css"]
 description: Learn how to integrate tailwindcss in your Webiny project.
 ---
