--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -65,7 +65,7 @@ You can also:
 
 ### Improved Watch Command With Brand New `browser` Output ([#1573](https://github.com/webiny/webiny-js/pull/1573))
 
-In our [previous release](/docs/changelog/5.5.0), we released the brand new [`webiny watch`](http://localhost:3000/docs/changelog/5.5.0#brand-new-webiny-watch-command-1540) command. But, we didn't stop there, so today, we're happy to introduce its first improvement.
+In our [previous release](/docs/changelog/5.5.0), we released the brand new [`webiny watch`](/docs/changelog/5.5.0#brand-new-webiny-watch-command-1540) command. But, we didn't stop there, so today, we're happy to introduce its first improvement.
 
 Upon running the `webiny watch` command, by simply appending the `--browser output` argument, you can now have all of the build, deploy, and logs output displayed in your browser.
 
