fix(headless-cms): wrong webiny commands

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
@@ -379,18 +379,8 @@ export default [
 
 
 :::danger
-Do not forget to rebuild, redeploy and rerun your application.
+Do not forget to redeploy the API and rerun or redeploy your application.
 :::
-
-```shell title="build api-headless-cms package"
-cd your-project-root
-yarn webiny ws run build --folder=packages/api-headless-cms
-```
-
-```shell title="build app-headless-cms package"
-cd your-project-root
-yarn webiny ws run build --folder=packages/app-headless-cms
-```
 
 ```shell title="redeploy your api"
 cd your-project-root
