--- a/docs/key-topics/security-framework/introduction.mdx
+++ b/docs/key-topics/security-framework/introduction.mdx
@@ -8,83 +8,59 @@ description: Learn how security works in Webiny.
 
 :::tip What you'll learn
 
+- the key terms used in the context of security
 - what is Webiny Security Framework
-- the main concepts behind the framework
 
 :::
 
-Webiny Security Framework is a thin application layer that allows you to handle _authentication_ and _authorization_ using plugins. It is present on both API side and React side of Webiny apps. It's main purpose is to provide a simple and flexible system to work with permissions.
-
-Webiny apps, as well as your custom apps, request permissions from the security framework when the code reaches certain points in your business logic and needs to check if current _identity_ is _authorized_ (has _permission_) to execute certain operations.
+Before we can talk about Webiny Security Framework, we need to explain a few key terms that are constantly used when talking about security in general. You're most likely already familiar with some of them, but let's quickly go over these terms, in case you're new to the world of security.
 
 ## What's Authentication?
 
-Authentication is a process of verifying the provided credentials and retrieving `identity` information. Credentials can be a combination of a username and a password, a JWT token, a private key, etc. In the context of Webiny, credentials are a JWT token for the API calls, and a username/password for React apps.
+Authentication is a process in which the application attempts to verify the credentials provided by the client (e.g. a browser, a mobile app, or another application), and retrieves identity information using those verified credentials.
+
+Credentials can be a combination of a username and a password, a [JWT token](https://en.wikipedia.org/wiki/JSON_Web_Token), etc. Every time a request is made to your API by a client, that request will most likely contain a set of credentials (usually using the [Authorization HTTP request header](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Authorization)) that will allow you to identify the client.
+
+Once the identity is established, your application will usually keep that information available for the rest of the system to use, for the duration of that particular request.
 
 ## What's an Identity?
 
-An identity is a _verified_ piece of information that tells us _who_ is using the system (be it API or React app). Identity must be determined during the `authentication` phase.
+An identity is a _verified_ piece of information that tells us _who_ is accessing your application. As we already established in the previous section, identity is determined in the authentication process. However, not every interaction with your application requires identity information. Thus, it's also acceptable for a request to be anonymous.
 
-It is OK _not_ to have an identity. Not every interaction with the system requires authorization; and since
-authorization is performed based on the identity (we assign permissions to an identity), it just means that there
-are scenarios when having identity is not necessary.
-
-We use the following TS type to construct an identity instance when authentication is successful:
-
-```ts
-type SecurityIdentity = {
-  id: string;
-  type: string;
-  displayName: string;
-  [key: string]: any;
-};
-```
-
-The main piece of information is `id`. This can be an email, actual ID from your IdP, username, anything that makes that identity unique.
-
-`type` tells us what type of identity it is. This can help you distinguish between identities from different user pools, or tell you if the identity is an API key. It also helps you match the identity with your authorization logic. It's just a string that means something to you as a developer.
-
-`displayName` is used when we need to store a human-readable string to be displayed later.
-
-All the other properties are up to you, but the 3 properties specified above are mandatory.
-
-:::info Identity vs. User
-
-Keep in mind that `identity` and `user` are not the same thing. A `user` is a superset of `identity`, meaning, it will have a lot more information associated with it. That information is often related to your project's business logic (user profile, payment info, addresses).
-
-`Identity` doesn't need to contain any of that information. It's enough for identity to only have an ID (be it UUID, username, or email). As long as it's verified, that's all the security framework cares about.
-
-:::
-
-:::tip Best practices
-
-Always verify the validity of the JWT using the JSON Web Key (JWK) provided by your Identity Provider. That way you'll be sure that the token was signed by the trusted issuer, and that you can confidently use the information inside.
-
-:::
+As an example of anonymous requests, let's pretend your API is exposing a publicly accessible endpoint, to fetch published pages, or weather information. That public endpoint doesn't need to know anything about the client in order to return the data. Requests to these public endpoints won't need to go through authentication process, and thus, don't need to have any credentials.
 
 ## What's Authorization?
 
-Authorization is a process of determining if current identity is allowed to perform the requested action. During request processing, a system can execute authorization many times. Different parts of the system will require different `permissions`. Once the security framework provides the requested permission object
-to the code, authorization checks can be performed.
+Authorization is a process of determining if current identity is allowed to perform the requested action. During request processing, your application can execute authorization many times. Different parts of the application will use different rules to determine if the requested action is allowed. These rules are called _permissions_.
 
 ## What's a Permission?
 
-A permission tells the system what the `identity` can or cannot do. In case of Webiny, it's a simple object that
-contains a _name_, and additional optional properties that are relevant to the business logic. Permissions are used
-during `authorization`.
+A permission is a set of rules which describe what the identity can or cannot do. In case of Webiny, it's a simple object that contains a _name_, and additional optional properties that are relevant to the business logic of your application.
 
-```ts
-interface SecurityPermission {
-  name: string;
-  [key: string]: any;
+For example, let's pretend Joe wants to update a recipe for muffins, originally created by Jane. Since we already know his name, it means he has valid credentials. Now we need to see if he's actually allowed to update recipes, especially the ones that were not originally written by him.
+
+The application will first load all permissions that are assigned to Joe, and then check if he can update recipes. In the context of Webiny, such a permission could look like this:
+
+```json title="Recipe permission"
+{
+  "name": "recipe", // unique name for a permission
+  "rwd": "rw", // read/write/delete actions
+  "own": true // can only perform actions on own recipes
 }
 ```
 
-This simple interface is the only requirement for Webiny Security Framework to operate. Where you store permissions, how you load them, and how you assign them to the identity, is _completely up to you_.
+This means that Joe can perform _read_ and _write_ operations, but only on recipes he created. Which, in our scenario, means that the application will reject his attempt to update a recipe that belongs to Jane.
 
 ---
 
-Webiny provides the basic user management for its Admin Area app. For your custom apps, you'll have to implement your own user management. Using the Security Framework your implementation can be as simple or as complex as you need.
+Armed with all this information, we can now describe the Webiny Security Framework.
 
-In the following articles we dive deeper into the API and React side of things and see how these two environments
-are similar but also slightly different at the same time.
+## Webiny Security Framework
+
+Webiny Security Framework is a thin application layer that allows you to handle _authentication_ and _authorization_ using plugins. It can be used in APIs (be it GraphQL API, REST API, or a custom Lambda handler) as well as React applications. Its main purpose is to provide a simple and flexible system to work with permissions.
+
+Webiny applications, as well as your custom ones, request permissions from the security framework when they need to check if current _identity_ is _authorized_ (in other words, _has permission_) to execute certain operations.
+
+---
+
+In the following articles we dive deeper into how the framework works in the context of Webiny APIs and React applications.
