--- a/docs/how-to-guides/deployment/connect-domain.mdx
+++ b/docs/how-to-guides/deployment/connect-domain.mdx
@@ -10,6 +10,7 @@ description: Learn how to connect custom domain to your application in a Webiny 
 
 By default, both **Admin Area** `(apps/admin)` and **Website** `(apps/admin)` React applications are accessible by the CloudFront URL,
 which is fine for development purposes, however, for the production environment you're most likely need a custom domain for those applications.
+
 Why? Because, custom domains are human-readable, easy to remember, and good for branding.
 
 In this guide, we show how to add a custom domain to the **Admin Area** `(apps/admin)` React application,
@@ -60,6 +61,11 @@ Head over to the details of your CloudFront Distribution and hit **Edit**:
 
 <!-- vale on -->
 
+:::info
+To identify which CloudFront distribution you need to edit, you can use the `yarn webiny info --env=<ENV>` command,
+which lists the CloudFront URLs of all deployed applications for that environment.
+:::
+
 Then type in your new domain name in the **Alternate Domain Names (CNAMEs)** field:
 
 <!-- vale off -->
@@ -71,13 +77,13 @@ Then type in your new domain name in the **Alternate Domain Names (CNAMEs)** fie
 />
 
 :::info
-If you need to add multiple **CNAMEs**, for example, `example.com` and `www.example.com`, then
-please make sure to separate them with commas or put each on a new line.
+You can add multiple **CNAMEs,** for example, `example.com` and `www.example.com`,
+by either separating them with commas or putting each one on a new line.
 :::
 
 <!-- vale on -->
 
-Now switch the **SSL Certificate** to **Custom SSL Certificate** and select the certificate for the custom domain (in this case `test.webiny.com`) from the drop down:
+Now switch the **SSL Certificate** to **Custom SSL Certificate** and select the certificate for the custom domain (in our case `test.webiny.com`) from the drop down:
 
 
 <!-- vale off -->
@@ -91,9 +97,9 @@ Now switch the **SSL Certificate** to **Custom SSL Certificate** and select the 
 <!-- vale on -->
 
 :::info I don't have an SSL certificate?
-If you don't have an **SSL certificate**, you can request one by clicking *Request or Import a Certificate with ACM* button.
+If you don't have an **SSL certificate**, you can request one by clicking *Request or Import a Certificate with ACM* button as shown.
 
-Learn more about AWS Certificate Manager (ACM) on the [`official AWS docs`](https://docs.aws.amazon.com/acm/latest/userguide/acm-overview.html).
+Learn more about AWS Certificate Manager (ACM) in the official [AWS documentation article](https://docs.aws.amazon.com/acm/latest/userguide/acm-overview.html).
 :::
 
 After selecting the **SSL Certificate**, scroll down and hit **Yes, Edit** to save the changes.
@@ -149,15 +155,12 @@ Then switch the **Viewer Protocol Policy** to **Redirect HTTP to HTTPS**. And sc
 
 <!-- vale on -->
 
-:::caution
-The changes made to the CloudFront distribution might take few minutes to process.
-:::
-
 Next, let’s point our domain to the CloudFront Distribution.
 
 ## Point Domain to CloudFront Distribution
 
-Now that you have added our custom domain as the alternative domain for the CloudFront URL.
+Now that we have added our custom domain as the alternative domain for the CloudFront URL, we also must configure the DNS service for the domain to route traffic for the domain,
+such as `www.example.com`, to the CloudFront domain name for your distribution, such as `d111111abcdef8.cloudfront.net`.
 
 Use the method provided by your DNS service provider to add a **CNAME** record for your domain.
 This new **CNAME** record will redirect DNS queries from your domain (for example, `www.example.com`) to the CloudFront domain name for your distribution (for example, `d111111abcdef8.cloudfront.net`).
@@ -167,4 +170,14 @@ For more information, see the documentation provided by your DNS service provide
 The changes made to the DNS service might take few minutes to reflect on the AWS CloudFront Distribution.
 :::
 
-Finally, test the alternate domain name by visiting URLs with your domain name instead of the CloudFront domain name for your distribution.
+Finally, test the alternate domain name by visiting URLs with your domain name instead of the CloudFront domain name for your distribution:
+
+<!-- vale off -->
+
+<img
+    src={require("./assets/connect-custom-domain/test-domain.png").default}
+    alt="Test custom domain"
+    style={{ borderRadius: 0, marginBottom: 24 }}
+/>
+
+<!-- vale on -->
